--- a/ui/servicesconnection.ui
+++ b/ui/servicesconnection.ui
@@ -25,7 +25,7 @@
       <string/>
      </property>
      <property name="pixmap" >
-      <pixmap resource="../images/application.qrc" >:/network_disconnected_lan.png</pixmap>
+      <pixmap resource="../application.qrc" >:/images/network_disconnected_lan.png</pixmap>
      </property>
     </widget>
    </item>
@@ -55,7 +55,7 @@
       <string>Abort</string>
      </property>
      <property name="icon" >
-      <iconset resource="../images/application.qrc" >:/button_cancel.png</iconset>
+      <iconset resource="../application.qrc" >:/images/button_cancel.png</iconset>
      </property>
     </widget>
    </item>
@@ -96,7 +96,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../images/application.qrc" />
+  <include location="../application.qrc" />
  </resources>
  <connections/>
 </ui>
