--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -155,6 +155,20 @@
           <property name="spacing" >
            <number>6</number>
           </property>
+          <item row="0" column="3" >
+           <widget class="QToolButton" name="m_changeProjectPathBtn" >
+            <property name="text" >
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2" >
+           <widget class="QLabel" name="label_3" >
+            <property name="text" >
+             <string>Business object description :</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="3" >
            <widget class="QToolButton" name="m_changeObjectPathBtn" >
             <property name="text" >
@@ -164,13 +178,6 @@
           </item>
           <item row="1" column="2" >
            <widget class="QLineEdit" name="m_objectDescriptionPathLineEdit" />
-          </item>
-          <item row="0" column="3" >
-           <widget class="QToolButton" name="m_changeProjectPathBtn" >
-            <property name="text" >
-             <string>...</string>
-            </property>
-           </widget>
           </item>
           <item row="0" column="0" >
            <widget class="QLabel" name="label_2" >
@@ -182,12 +189,18 @@
           <item row="0" column="1" colspan="2" >
            <widget class="QLineEdit" name="m_projectPathLineEdit" />
           </item>
-          <item row="1" column="0" colspan="2" >
-           <widget class="QLabel" name="label_3" >
+          <item row="2" column="0" >
+           <widget class="QLabel" name="label_11" >
             <property name="text" >
-             <string>Business object description :</string>
+             <string>Default p&amp;roject path name :</string>
+            </property>
+            <property name="buddy" >
+             <cstring>m_lineEditDefaultProjectPathName</cstring>
             </property>
            </widget>
+          </item>
+          <item row="2" column="1" colspan="2" >
+           <widget class="QLineEdit" name="m_lineEditDefaultProjectPathName" />
           </item>
          </layout>
         </widget>
@@ -617,6 +630,40 @@
    <header>../src/kcolorcombo.h</header>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>tabWidget</tabstop>
+  <tabstop>m_alertStandardCheckBox</tabstop>
+  <tabstop>m_createBakCheckBox</tabstop>
+  <tabstop>m_saveSessionCheckBox</tabstop>
+  <tabstop>m_popupWhenFileModifiedCheckBox</tabstop>
+  <tabstop>m_langComboBox</tabstop>
+  <tabstop>m_projectPathLineEdit</tabstop>
+  <tabstop>m_changeProjectPathBtn</tabstop>
+  <tabstop>m_objectDescriptionPathLineEdit</tabstop>
+  <tabstop>m_changeObjectPathBtn</tabstop>
+  <tabstop>m_lineEditDefaultProjectPathName</tabstop>
+  <tabstop>m_fileTypeComboBox</tabstop>
+  <tabstop>m_fileTypePath</tabstop>
+  <tabstop>m_specifiqueCheckBox</tabstop>
+  <tabstop>m_CVSToolsLineEdit</tabstop>
+  <tabstop>m_cvsToolButton</tabstop>
+  <tabstop>m_syntaxFileTypeComboBox</tabstop>
+  <tabstop>m_syntaxTypeComboBox</tabstop>
+  <tabstop>m_boldCheckBox</tabstop>
+  <tabstop>m_italicCheckBox</tabstop>
+  <tabstop>m_underlineCheckBox</tabstop>
+  <tabstop>m_StrikeoutCheckBox</tabstop>
+  <tabstop>m_fontSizeSpinBox</tabstop>
+  <tabstop>m_colorComboBox</tabstop>
+  <tabstop>m_fontComboBox</tabstop>
+  <tabstop>m_exempleTextEdit</tabstop>
+  <tabstop>m_cvsVerboseComboBox</tabstop>
+  <tabstop>m_cvsCompressionComboBox</tabstop>
+  <tabstop>m_cvsPruneCheckBox</tabstop>
+  <tabstop>m_cvsCreateDirCheckBox</tabstop>
+  <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
+ </tabstops>
  <resources>
   <include location="../application.qrc" />
  </resources>
