--- a/ui/projectproperty.ui
+++ b/ui/projectproperty.ui
@@ -63,7 +63,7 @@
       <item row="3" column="1" >
        <widget class="QComboBox" name="m_projectVersionCombo" >
         <property name="currentIndex" >
-         <number>3</number>
+         <number>0</number>
         </property>
         <item>
          <property name="text" >
@@ -83,6 +83,16 @@
         <item>
          <property name="text" >
           <string>GCE 120</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>GCE 130</string>
+         </property>
+        </item>
+        <item>
+         <property name="text" >
+          <string>GCE 140</string>
          </property>
         </item>
        </widget>
