--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -21,7 +21,7 @@
      <number>0</number>
     </property>
     <property name="spacing" >
-     <number>0</number>
+     <number>6</number>
     </property>
     <item row="0" column="0" >
      <widget class="TabEditor" name="m_tabEditors" />
@@ -34,7 +34,7 @@
      <x>0</x>
      <y>0</y>
      <width>668</width>
-     <height>29</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="m_helpMenu" >
@@ -217,14 +217,11 @@
    <addaction name="m_searchAct" />
   </widget>
   <widget class="QDockWidget" name="m_xslContentDock" >
-   <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
-   </property>
    <property name="windowTitle" >
     <string>File Content</string>
    </property>
    <attribute name="dockWidgetArea" >
-    <number>2</number>
+    <number>1</number>
    </attribute>
    <widget class="QWidget" name="dockWidgetContents" >
     <layout class="QGridLayout" >
@@ -232,7 +229,7 @@
       <number>0</number>
      </property>
      <property name="spacing" >
-      <number>0</number>
+      <number>6</number>
      </property>
      <item row="0" column="0" >
       <widget class="QTreeView" name="m_xslContentTreeView" >
@@ -245,9 +242,6 @@
    </widget>
   </widget>
   <widget class="QDockWidget" name="m_projectDirectoryDock" >
-   <property name="allowedAreas" >
-    <set>Qt::LeftDockWidgetArea|Qt::NoDockWidgetArea|Qt::RightDockWidgetArea</set>
-   </property>
    <property name="windowTitle" >
     <string>Project Directory</string>
    </property>
@@ -344,6 +338,44 @@
    </attribute>
    <addaction name="m_refreshWebServicesListAct" />
    <addaction name="m_callWebServicesAct" />
+  </widget>
+  <widget class="QDockWidget" name="m_snipetDock" >
+   <property name="windowTitle" >
+    <string>Template</string>
+   </property>
+   <attribute name="dockWidgetArea" >
+    <number>2</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents_3" >
+    <layout class="QGridLayout" >
+     <property name="margin" >
+      <number>0</number>
+     </property>
+     <property name="spacing" >
+      <number>6</number>
+     </property>
+     <item row="0" column="0" >
+      <widget class="QToolBox" name="m_snipetToolBox" >
+       <property name="currentIndex" >
+        <number>0</number>
+       </property>
+       <widget class="QWidget" name="other" >
+        <property name="geometry" >
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>70</width>
+          <height>261</height>
+         </rect>
+        </property>
+        <attribute name="label" >
+         <string>Other</string>
+        </attribute>
+       </widget>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <action name="m_newAct" >
    <property name="icon" >
