--- a/ui/custom.ui
+++ b/ui/custom.ui
@@ -136,14 +136,143 @@
       <attribute name="icon" >
        <iconset resource="../application.qrc" >:/images/folder.png</iconset>
       </attribute>
-      <layout class="QVBoxLayout" >
+      <layout class="QGridLayout" >
        <property name="margin" >
         <number>9</number>
        </property>
        <property name="spacing" >
         <number>6</number>
        </property>
-       <item>
+       <item row="2" column="0" >
+        <widget class="QGroupBox" name="groupBox_5" >
+         <property name="title" >
+          <string>Tools</string>
+         </property>
+         <layout class="QVBoxLayout" >
+          <property name="margin" >
+           <number>9</number>
+          </property>
+          <property name="spacing" >
+           <number>6</number>
+          </property>
+          <item>
+           <layout class="QGridLayout" >
+            <property name="margin" >
+             <number>0</number>
+            </property>
+            <property name="spacing" >
+             <number>6</number>
+            </property>
+            <item row="0" column="0" >
+             <widget class="QLabel" name="label_7" >
+              <property name="text" >
+               <string>&amp;CVS : </string>
+              </property>
+              <property name="buddy" >
+               <cstring>m_CVSToolsLineEdit</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="3" >
+             <widget class="QToolButton" name="m_mergeToolButton" >
+              <property name="text" >
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0" colspan="2" >
+             <widget class="QLabel" name="label_12" >
+              <property name="text" >
+               <string>&amp;Merge :</string>
+              </property>
+              <property name="buddy" >
+               <cstring>m_mergeToolLineEdit</cstring>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2" >
+             <widget class="QLineEdit" name="m_mergeToolLineEdit" />
+            </item>
+            <item row="0" column="1" colspan="2" >
+             <widget class="QLineEdit" name="m_CVSToolsLineEdit" />
+            </item>
+            <item row="0" column="3" >
+             <widget class="QToolButton" name="m_cvsToolButton" >
+              <property name="text" >
+               <string>...</string>
+              </property>
+             </widget>
+            </item>
+           </layout>
+          </item>
+          <item>
+           <spacer>
+            <property name="orientation" >
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" >
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="1" column="0" >
+        <widget class="QGroupBox" name="groupBox_3" >
+         <property name="title" >
+          <string>Project files path</string>
+         </property>
+         <layout class="QGridLayout" >
+          <property name="margin" >
+           <number>9</number>
+          </property>
+          <property name="spacing" >
+           <number>6</number>
+          </property>
+          <item row="1" column="0" >
+           <widget class="QLabel" name="label_4" >
+            <property name="text" >
+             <string>Path :</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" >
+           <widget class="QLineEdit" name="m_fileTypePath" />
+          </item>
+          <item row="0" column="0" colspan="2" >
+           <widget class="QComboBox" name="m_fileTypeComboBox" >
+            <item>
+             <property name="text" >
+              <string>Stylesheet (*.xsl)</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>JavaScript (*.js)</string>
+             </property>
+            </item>
+            <item>
+             <property name="text" >
+              <string>Configuration file (configuration.xml)</string>
+             </property>
+            </item>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="2" >
+           <widget class="QCheckBox" name="m_specifiqueCheckBox" >
+            <property name="text" >
+             <string>Can be specifique</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="0" column="0" >
         <widget class="QGroupBox" name="groupBox_2" >
          <property name="title" >
           <string>Custom path</string>
@@ -201,112 +330,6 @@
           </item>
           <item row="2" column="1" colspan="2" >
            <widget class="QLineEdit" name="m_lineEditDefaultProjectPathName" />
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox_3" >
-         <property name="title" >
-          <string>Project files path</string>
-         </property>
-         <layout class="QGridLayout" >
-          <property name="margin" >
-           <number>9</number>
-          </property>
-          <property name="spacing" >
-           <number>6</number>
-          </property>
-          <item row="1" column="0" >
-           <widget class="QLabel" name="label_4" >
-            <property name="text" >
-             <string>Path :</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1" >
-           <widget class="QLineEdit" name="m_fileTypePath" />
-          </item>
-          <item row="0" column="0" colspan="2" >
-           <widget class="QComboBox" name="m_fileTypeComboBox" >
-            <item>
-             <property name="text" >
-              <string>Stylesheet (*.xsl)</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>JavaScript (*.js)</string>
-             </property>
-            </item>
-            <item>
-             <property name="text" >
-              <string>Configuration file (configuration.xml)</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="2" column="0" colspan="2" >
-           <widget class="QCheckBox" name="m_specifiqueCheckBox" >
-            <property name="text" >
-             <string>Can be specifique</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox_5" >
-         <property name="title" >
-          <string>Tools</string>
-         </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
-           <number>9</number>
-          </property>
-          <property name="spacing" >
-           <number>6</number>
-          </property>
-          <item>
-           <layout class="QHBoxLayout" >
-            <property name="margin" >
-             <number>0</number>
-            </property>
-            <property name="spacing" >
-             <number>6</number>
-            </property>
-            <item>
-             <widget class="QLabel" name="label_7" >
-              <property name="text" >
-               <string>CVS : </string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="m_CVSToolsLineEdit" />
-            </item>
-            <item>
-             <widget class="QToolButton" name="m_cvsToolButton" >
-              <property name="text" >
-               <string>...</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <spacer>
-            <property name="orientation" >
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" >
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </widget>
