--- a/ui/mainform.ui
+++ b/ui/mainform.ui
@@ -137,7 +137,7 @@
     <addaction name="m_uncommentLineAct" />
     <addaction name="m_completeAct" />
    </widget>
-   <widget class="QMenu" name="menu_Tools" >
+   <widget class="QMenu" name="m_toolsMenu" >
     <property name="title" >
      <string>&amp;Tools</string>
     </property>
@@ -151,7 +151,7 @@
    <addaction name="m_projectMenu" />
    <addaction name="m_webServicesMenu" />
    <addaction name="m_windowsMenu" />
-   <addaction name="menu_Tools" />
+   <addaction name="m_toolsMenu" />
    <addaction name="m_helpMenu" />
   </widget>
   <widget class="QStatusBar" name="statusbar" />
