--- a/ui/snipetproperty.ui
+++ b/ui/snipetproperty.ui
@@ -88,6 +88,16 @@
       <property name="spacing" >
        <number>6</number>
       </property>
+      <item row="3" column="0" >
+       <widget class="QLabel" name="label_4" >
+        <property name="text" >
+         <string>&amp;Category :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_categoryComboBox</cstring>
+        </property>
+       </widget>
+      </item>
       <item row="1" column="0" >
        <widget class="QLabel" name="label_2" >
         <property name="text" >
@@ -108,26 +118,13 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0" colspan="2" >
-       <widget class="QLabel" name="label_3" >
-        <property name="text" >
-         <string>&amp;Description :</string>
-        </property>
-        <property name="buddy" >
-         <cstring>m_descriptionTextEdit</cstring>
-        </property>
-       </widget>
+      <item row="4" column="2" >
+       <widget class="QTextEdit" name="m_descriptionTextEdit" />
       </item>
       <item row="1" column="2" >
        <widget class="QLineEdit" name="m_iconLineEdit" />
       </item>
       <item row="3" column="2" >
-       <widget class="QTextEdit" name="m_descriptionTextEdit" />
-      </item>
-      <item row="0" column="2" >
-       <widget class="QLineEdit" name="m_nameLineEdit" />
-      </item>
-      <item row="2" column="2" >
        <widget class="QComboBox" name="m_categoryComboBox" >
         <property name="editable" >
          <bool>true</bool>
@@ -139,13 +136,29 @@
         </item>
        </widget>
       </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="label_4" >
+      <item row="4" column="0" colspan="2" >
+       <widget class="QLabel" name="label_3" >
         <property name="text" >
-         <string>&amp;Category :</string>
+         <string>&amp;Description :</string>
         </property>
         <property name="buddy" >
-         <cstring>m_categoryComboBox</cstring>
+         <cstring>m_descriptionTextEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2" >
+       <widget class="QLineEdit" name="m_nameLineEdit" />
+      </item>
+      <item row="2" column="2" >
+       <widget class="QLineEdit" name="m_keyLineEdit" />
+      </item>
+      <item row="2" column="0" >
+       <widget class="QLabel" name="label_5" >
+        <property name="text" >
+         <string>&amp;Snipet key :</string>
+        </property>
+        <property name="buddy" >
+         <cstring>m_keyLineEdit</cstring>
         </property>
        </widget>
       </item>
@@ -157,10 +170,11 @@
  <tabstops>
   <tabstop>m_nameLineEdit</tabstop>
   <tabstop>m_iconLineEdit</tabstop>
+  <tabstop>m_keyLineEdit</tabstop>
   <tabstop>m_categoryComboBox</tabstop>
   <tabstop>m_descriptionTextEdit</tabstop>
-  <tabstop>cancelButton</tabstop>
   <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
  </tabstops>
  <resources>
   <include location="../application.qrc" />
