Modif template et corrections

--- a/ui/runsnipet.ui
+++ b/ui/runsnipet.ui
@@ -110,6 +110,11 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>okButton</tabstop>
+  <tabstop>cancelButton</tabstop>
+  <tabstop>m_detailPushButton</tabstop>
+ </tabstops>
  <resources>
   <include location="../application.qrc" />
  </resources>
